INCLUDES = -I$(top_srcdir)/src
METASOURCES = AUTO
tabsrcdir = $(kde_datadir)/yakuake/plastik_light/tabs
tabsrc_DATA = back_image.png left_corner.png minus_down.png minus_over.png \
		minus_up.png plus_down.png plus_over.png plus_up.png right_corner.png \
		selected_back.png selected_left.png selected_right.png unselected_back.png separator.png
